refactored the configuration to render the algorithm agnostic of the data implementation...