@@ -1,10 +1,11 @@
 package obp3.traversal.dfs;
 
 import obp3.IExecutable;
-import obp3.sli.core.IRootedGraph;
 import obp3.Sequencer;
+import obp3.sli.core.IRootedGraph;
 import obp3.traversal.dfs.relational.DepthFirstTraversalRelation;
 
+import java.util.Collections;
 import java.util.Set;
 import java.util.function.BooleanSupplier;
 
@@ -19,6 +20,6 @@ public class DepthFirstTraversalRelational<V> implements IExecutable<Set<V>> {
         var relation = new DepthFirstTraversalRelation<>(graph);
         var sequencer = new Sequencer<>(relation);
         var configuration = sequencer.run(hasToTerminateSupplier);
-        return configuration.map(DepthFirstTraversalConfiguration::getKnown).orElse(Set.of());
+        return configuration.map(DepthFirstTraversalConfiguration::getKnown).orElse(Collections.emptySet());
     }
 }
